--- a/honey-rae.html
+++ b/honey-rae.html
@@ -18,12 +18,17 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="css/honey.css">
+    <link rel="stylesheet" href="css/readMoreBtn.css">
+
+
+
+
 
 </head>
 
 <body>
-     <!-- Header -->
-     <header>
+    <!-- Header -->
+    <header>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -49,19 +54,28 @@
     <!-- Overview -->
     <section>
         <div class="overview">
-        <h2>Overview</h2>
-        <p>This application was built using React for multiple users. The user can log in as a customer or an employee.
-            The
-            employee-user has the ability to search service tickets by name, view emergency only tickets or all tickets
-            and
-            view a list of customers. When clicking on the customer link, they can view the customer details. They also
-            have
-            the ability to view employees and employee details. The customer-user has the ability to create a service
-            request ticket, which then displays to their screen and updates to the employees account as well. The
-            customer-user can also view open tickets (service requests that have not been worked on) and view just their
-            service request tickets. Dynamic coding. ERD is attached below.
-        </p>
-    </div>
+            <h2>Overview</h2>
+            <p> Honey Rae Repairs is a dynamic web application for internal issue management. I coded the whole app
+                using React, CSS and custom Javascript.<span id="dots">..</span><span id="more">
+                    This application was built for multiple users. The user can log in as a customer or an employee.
+                    The
+                    employee-user has the ability to search service tickets by name, view emergency only tickets or all
+                    tickets
+                    and
+                    view a list of customers. When clicking on the customer link, they can view the customer details.
+                    They also
+                    have
+                    the ability to view employees and employee details. The customer-user has the ability to create a
+                    service
+                    request ticket, which then displays to their screen and updates to the employees account as well.
+                    The
+                    customer-user can also view open tickets (service requests that have not been worked on) and view
+                    just their
+                    service request tickets. Dynamic coding. ERD is attached below.</span> <a onclick="readMore()"
+                    id="myBtn">Read more</a>
+            </p>
+
+        </div>
     </section>
 
     <!-- Video -->
@@ -104,13 +118,16 @@
         </ul>
         <div class="copyright">
             <p><small>
-            &#169 Tiffani Burk 2022. All rights reserved. 
-            </small></p>
+                    &#169 Tiffani Burk 2022. All rights reserved.
+                </small></p>
         </div>
     </footer>
 
 
     <script src="js/index.js"></script>
+    <script type="text/javascript" src="js/readMore.js"></script>
+
+
 
 </body>
 
