--- a/honey-rae.html
+++ b/honey-rae.html
@@ -72,7 +72,7 @@
                     customer-user can also view open tickets (service requests that have not been worked on) and view
                     just their
                     service request tickets. Dynamic coding. ERD is attached below.</span> <a onclick="readMore()"
-                    id="myBtn">Read more</a>
+                    id="myBtn">Read More</a>
             </p>
 
         </div>
