--- a/cake-my-day.html
+++ b/cake-my-day.html
@@ -66,7 +66,7 @@
             <p> Cake My Day is a responsive mobile application for an e-commerce store.<span id="dots">..</span><span
                     id="more"> While this applicaiton never made it to production, it was designed for a real client.
                     The goal of this application was to make it easy and convenient for this local baker to receive and
-                    confirm orders. </span> <a onclick="readMore()" id="myBtn">Read More</a>
+                    confirm orders. </span> <a onclick="readMore()" id="myBtn">Read more</a>
             </p>
             <br>
             <h2>My Role</h2>
