--- a/lyrically.html
+++ b/lyrically.html
@@ -76,7 +76,7 @@
                     initiative collect data and conduct user interviews to create a case study before developing this
                     application. Below, I have detailed my design process and included video a walkthrough of the
                     developed
-                    application. </span><a onclick="readMore()" id="myBtn">Read More</a>
+                    application. </span><a onclick="readMore()" id="myBtn">Read more</a>
 
             </p>
 
