--- a/manooth.html
+++ b/manooth.html
@@ -64,7 +64,7 @@
             <span id="more">Manooth Furniture is a fictional business, selling affordable, high-end furniture, made in
                 Ireland. This was
                 a project for my Adobe XD class, led by Adobe-certified instructor, Daniel Scott.</span> <a
-                onclick="readMore()" id="myBtn">Read More</a>
+                onclick="readMore()" id="myBtn">Read more</a>
         </p>
 
 
