--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -69,7 +69,7 @@
             While at Nashville Software School, I was tasked with creating a mobile app that would make it easy for
             young adults to do peer-to-peer financial transfers.
             Below I have detailed my design process and included a clickable prototype.
-          </span> <a onclick="readMore()" id="myBtn">Read More</a>
+          </span> <a onclick="readMore()" id="myBtn">Read more</a>
         </p>
       </h2>
       <div class="btn-section">
