updated nav and added a custom logo

--- a/honey-rae.html
+++ b/honey-rae.html
@@ -29,6 +29,11 @@
 <body>
     <!-- Header -->
     <header>
+        <div>
+            <a href="index.html">
+                <img src="img/logo/1.png" alt="logo" class="logo">
+            </a>
+        </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
