--- a/lyrically.html
+++ b/lyrically.html
@@ -37,6 +37,11 @@
 <body>
     <!-- Header -->
     <header>
+        <div>
+            <a href="index.html">
+                <img src="img/logo/1.png" alt="logo" class="logo">
+            </a>
+        </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -56,6 +61,9 @@
             <h4>Web Application</h4>
             <p class="section__subtitle section__subtitle--intro">UX / UI / Front-End</p>
         </div>
+
+
+
     </header>
 
     <!-- Project -->
