--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <!-- Link Style Sheet -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/desktopNav.css">
+
 
 
 </head>
@@ -40,7 +42,29 @@
             </ul>
         </nav>
     </header>
+<!-- testing below nav -->
+<!-- <div class="desktopNav-container">
+    <input type="checkbox" id="menuToggler" class="input-toggler" />
+    <label for="menuToggler" class="menu-toggler">
+      <span class="menu-toggler__line"></span>
+      <span class="menu-toggler__line"></span>
+      <span class="menu-toggler__line"></span>
+    </label>
+    <aside class="sidebar">
+      <ul class="menu">
+        <li class="menu__item"><a class="menu__link" href="#home">Home</a></li>
+        <li class="menu__item"><a class="menu__link" href="#services">My Services</a></li>
+        <li class="menu__item"><a class="menu__link" href="#about">About Me</a></li>
+        <li class="menu__item"><a class="menu__link" href="#work">My Work</a></li> -->
+        <!-- <li class="menu__item"><a class="menu__link" href="#Contact">Contact</a></li> -->
+      <!-- </ul> -->
+    <!-- </aside>
+</div> -->
 
+
+  
+
+<main>
     <!-- Introduction -->
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
@@ -205,6 +229,9 @@
 
 
     <script src="js/index.js"></script>
+    <script src="js/desktopNav.js"></script>
+
+</main>
 
 </body>
 
