CTA button fixed

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
     <!-- Link Style Sheet -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/desktopNav.css">
-
-
-
 </head>
 
 <body>
@@ -42,8 +39,8 @@
             </ul>
         </nav>
     </header>
-<!-- testing below nav -->
-<!-- <div class="desktopNav-container">
+    <!-- testing below nav -->
+    <!-- <div class="desktopNav-container">
     <input type="checkbox" id="menuToggler" class="input-toggler" />
     <label for="menuToggler" class="menu-toggler">
       <span class="menu-toggler__line"></span>
@@ -56,182 +53,193 @@
         <li class="menu__item"><a class="menu__link" href="#services">My Services</a></li>
         <li class="menu__item"><a class="menu__link" href="#about">About Me</a></li>
         <li class="menu__item"><a class="menu__link" href="#work">My Work</a></li> -->
-        <!-- <li class="menu__item"><a class="menu__link" href="#Contact">Contact</a></li> -->
-      <!-- </ul> -->
+    <!-- <li class="menu__item"><a class="menu__link" href="#Contact">Contact</a></li> -->
+    <!-- </ul> -->
     <!-- </aside>
 </div> -->
 
 
-  
-
-<main>
-    <!-- Introduction -->
-    <section class="intro" id="home">
-        <h1 class="section__title section__title--intro">
-            Hi <p class="hand-wave">👋</p> I am <strong>Tiffani Burk</strong></h1>
-
-        <p class="section__subtitle section__subtitle--intro">UX DESIGNER</p>
-        <img src="img/profile.webp" alt="a picture of Tiffani smiling" class="intro__img">
-    </section>
 
 
-    <!-- My services -->
-    <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">What I do</h2>
-        <div class="services">
-            <div class="service">
-                <h3>Design</h3>
-                <img class="service-image" src="img/design copy.jpg" alt="">
-                <p>Tools: Figma, Adobe XD, Photoshop, Illustrator</p>
-            </div> <!-- / service -->
+    <main>
+        <!-- Introduction -->
+        <section class="intro" id="home">
+            <h1 class="section__title section__title--intro">
+                Hi <p class="hand-wave">👋</p> I am <strong>Tiffani Burk</strong></h1>
 
-            <div class="service">
-                <h3>Research</h3>
-                <img class="service-image" src="img/research copy.jpg" alt="">
-                <p>Methods: Market Research, User Interviews, Usability Testing, User Flows</p>
-            </div> <!-- / service -->
-
-            <div class="service">
-                <h3>Code</h3>
-                <img class="service-image" src="img/code copy.jpg" alt="">
-                <p>Tech Stack: Javascript, React, Next.js, HTML, CSS, Github</p>
-            </div> <!-- / service -->
-        </div> <!-- / services -->
-
-        <a href="#work" class="btn">My Work</a>
-    </section>
+            <p class="section__subtitle section__subtitle--intro">UX DESIGNER</p>
+            <img src="img/profile.webp" alt="a picture of Tiffani smiling" class="intro__img">
+        </section>
 
 
-    <!-- About me -->
-    <section class="about-me" id="about">
-        <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">UX Designer & Front-End Developer, based out of Nashville.
-        </p>
+        <!-- My services -->
+        <section class="my-services" id="services">
+            <h2 class="section__title section__title--services">What I do</h2>
+            <div class="services">
+                <div class="service">
+                    <h3>Design</h3>
+                    <img class="service-image" src="img/design copy.jpg" alt="">
+                    <p>Tools: Figma, Adobe XD, Photoshop, Illustrator</p>
+                </div> <!-- / service -->
 
-        <div class="about-me__body">
-            <p>I started learning graphic design in middle school from my dad, who is a graphic designer turned
-                entrepreneur. He taught me the ins and outs of Adobe Photoshop and Illustrator. Eventually, he started
-                his own direct mail advertising company and hired me on to replace him as the graphic designer. Since
-                then, I’ve discovered UX Design. I am a graduate of Nashville Software School. I graduated from their
-                Frontend Design and Development program.</p>
-            <p>In my free time, I enjoy martial arts 🥋 and singing 🎶</p>
-        </div>
+                <div class="service">
+                    <h3>Research</h3>
+                    <img class="service-image" src="img/research copy.jpg" alt="">
+                    <p>Methods: Market Research, User Interviews, Usability Testing, User Flows</p>
+                </div> <!-- / service -->
 
-        <img src="img/about.jpeg" alt="Tiffani and her dog smiling" class="about-me__img">
-    </section>
+                <div class="service">
+                    <h3>Code</h3>
+                    <img class="service-image" src="img/code copy.jpg" alt="">
+                    <p>Tech Stack: Javascript, React, Next.js, HTML, CSS, Github</p>
+                </div> <!-- / service -->
+            </div> <!-- / services -->
 
-    <!-- My Work -->
-    <section class="my-work" id="work">
-        <h2 class="section__title section__title--work">My work</h2>
-        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
-
-        <div class="portfolio">
-            <!-- Portfolio item 01 -->
-            <a href="lyrically.html" class="portfolio__item">
-                <img src="img/lyrically.png" alt="" class="portfolio__img">
-                <div class="item-text">
-                    <h3>Lyrically</h3>
-                    <p class="project-description">UX / UI / Front-End</p>
-                    <p class="viewBtn">View</p>
-                </div>
-            </a>
+            <a href="#work" class="btn">My Work</a>
+        </section>
 
 
-            <!-- Portfolio item 02 -->
-            <a href="rhino-splits.html" class="portfolio__item">
-                <img src="img/rhino-splits.png" alt="" class="portfolio__img">
-                <div class="item-text">
-                    <h3>Rhino Splits</h3>
-                    <p class="project-description">UX Research</p>
-                    <p class="viewBtn">View</p>
-                </div>
-            </a>
+        <!-- About me -->
+        <section class="about-me" id="about">
+            <h2 class="section__title section__title--about">Who I am</h2>
+            <p class="section__subtitle section__subtitle--about">UX Designer & Front-End Developer, based out of
+                Nashville.
+            </p>
 
+            <div class="about-me__body">
+                <p>I started learning graphic design in middle school from my dad, who is a graphic designer turned
+                    entrepreneur. He taught me the ins and outs of Adobe Photoshop and Illustrator. Eventually, he
+                    started
+                    his own direct mail advertising company and hired me on to replace him as the graphic designer.
+                    Since
+                    then, I’ve discovered UX Design. I am a graduate of Nashville Software School. I graduated from
+                    their
+                    Front-End Web Design and Development program.</p>
+                    <br>
+                <p>In my free time, I enjoy martial arts 🥋 and music 🎶</p>
+            </div>
 
+            <img src="img/about.jpeg" alt="Tiffani and her dog smiling" class="about-me__img">
+        </section>
 
-            <!-- Portfolio item 03 -->
-            <a href="honey-rae.html" class="portfolio__item">
-                <img src="img/honey-rae.png" alt="" class="portfolio__img">
-                <div class="item-text">
-                    <h3 class="proj-name">Honey Rae Repairs</h3>
-                    <p class="project-description">Front-End Dev</p>
-                    <p class="viewBtn">View</p>
-                </div>
-            </a>
+        <!-- My Work -->
+        <section class="my-work" id="work">
+            <h2 class="section__title section__title--work">My work</h2>
+            <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
-
-            <!-- Portfolio item 04 -->
-            <a href="cake-my-day.html" class="portfolio__item">
-                <img src="img/cake/cake.png" alt="" class="portfolio__img">
-                <div class="item-text">
-                    <h3>Cake My Day</h3>
-                    <p class="project-description">UX / UI Design</p>
-                    <p class="viewBtn">View</p>
-                </div>
-            </a>
-
-
-            <!-- Portfolio item 05 -->
-            <a href="manooth.html" class="portfolio__item">
-                <img src="img/manooth-furniture.jpg" alt="" class="portfolio__img">
-                <div class="item-text">
-                    <h3>Manooth Furniture</h3>
-                    <p class="project-description">UI Design</p>
-                    <p class="viewBtn">View</p>
-                </div>
-            </a>
-
-
-            <!-- Portfolio item 06 -->
-            <a href="visual-ui.html" class="portfolio__item">
-                <img src="img/UI.png" alt="" class="portfolio__img">
-                <div class="item-text">
-                    <p class="project-description">UI & Visual Elements</p>
-                    <p class="viewBtn">View</p>
-                </div>
-        </div>
-        </a>
-
-
-        </div>
-    </section>
-
-
-    <!-- Footer -->
-    <footer class="footer">
-        <!-- email address -->
-        <a href="mailto:tiffani.j.burk@gmail.com" class="footer__link">tiffani.j.burk@gmail.com</a>
-        <ul class="social-list">
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://www.linkedin.com/in/tiffani-burk/">
-                    <i class="fa-brands fa-linkedin-in"></i>
+            <div class="portfolio">
+                <!-- Portfolio item 01 -->
+                <a href="lyrically.html" class="portfolio__item">
+                    <img src="img/lyrically.png" alt="" class="portfolio__img">
+                    <div class="item-text">
+                        <h3>Lyrically</h3>
+                        <p class="project-description">UX / UI / Front-End</p>
+                        <p class="viewBtn">View</p>
+                    </div>
                 </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://dribbble.com/tiffani-burk">
-                    <i class="fab fa-dribbble"></i>
+
+
+                <!-- Portfolio item 02 -->
+                <a href="rhino-splits.html" class="portfolio__item">
+                    <img src="img/rhino-splits.png" alt="" class="portfolio__img">
+                    <div class="item-text">
+                        <h3>Rhino Splits</h3>
+                        <p class="project-description">UX Research</p>
+                        <p class="viewBtn">View</p>
+                    </div>
                 </a>
-            </li>
 
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com/tiffani-burk">
-                    <i class="fab fa-github"></i>
+
+
+                <!-- Portfolio item 03 -->
+                <a href="honey-rae.html" class="portfolio__item">
+                    <img src="img/honey-rae.png" alt="" class="portfolio__img">
+                    <div class="item-text">
+                        <h3 class="proj-name">Honey Rae Repairs</h3>
+                        <p class="project-description">Front-End Dev</p>
+                        <p class="viewBtn">View</p>
+                    </div>
                 </a>
-            </li>
-        </ul>
-
-        <div class="copyright">
-            <p><small>
-                    &#169 Tiffani Burk 2022. All rights reserved.
-                </small></p>
-        </div>
-    </footer>
 
 
-    <script src="js/index.js"></script>
-    <script src="js/desktopNav.js"></script>
+                <!-- Portfolio item 04 -->
+                <a href="cake-my-day.html" class="portfolio__item">
+                    <img src="img/cake/cake.png" alt="" class="portfolio__img">
+                    <div class="item-text">
+                        <h3>Cake My Day</h3>
+                        <p class="project-description">UX / UI Design</p>
+                        <p class="viewBtn">View</p>
+                    </div>
+                </a>
 
-</main>
+
+                <!-- Portfolio item 05 -->
+                <a href="manooth.html" class="portfolio__item">
+                    <img src="img/manooth-furniture.jpg" alt="" class="portfolio__img">
+                    <div class="item-text">
+                        <h3>Manooth Furniture</h3>
+                        <p class="project-description">UI Design</p>
+                        <p class="viewBtn">View</p>
+                    </div>
+                </a>
+
+
+                <!-- Portfolio item 06 -->
+                <a href="visual-ui.html" class="portfolio__item">
+                    <img src="img/UI.png" alt="" class="portfolio__img">
+                    <div class="item-text">
+                        <p class="project-description">UI & Visual Elements</p>
+                        <p class="viewBtn">View</p>
+                    </div>
+            </div>
+            </a>
+
+
+            </div>
+        </section>
+
+        <!-- Footer Component-->
+        <!-- <p onclick="Footer()">test me</p> -->
+        <!-- <div class="footertest"></div> -->
+    
+       
+        <!-- Footer -->
+        <footer class="footer">
+            <!-- email address -->
+            <a href="mailto:tiffani.j.burk@gmail.com" class="footer__link">tiffani.j.burk@gmail.com</a>
+            <ul class="social-list">
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://www.linkedin.com/in/tiffani-burk/">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://dribbble.com/tiffani-burk">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </li>
+
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://github.com/tiffani-burk">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
+            </ul>
+
+            <div class="copyright">
+                <p><small>
+                        &#169 Tiffani Burk 2022. All rights reserved.
+                    </small></p>
+            </div>
+        </footer>
+
+
+        <script src="js/index.js"></script>
+        <!-- <script src="js/desktopNav.js"></script> -->
+        <script src="js/Footer.js"></script>
+
+
+    </main>
 
 </body>
 
