new background color on Lyrically

--- a/lyrically.html
+++ b/lyrically.html
@@ -123,7 +123,8 @@
 
     <section>
         <h2>Tools and Process</h2>
-        <img class="design-proc" src="img/Lyrically/Design Tools.png" />
+        <img class="design-proc img-shadow" src="img/Lyrically/Design Tools.png" />
+    
 
         <br>
 
@@ -195,9 +196,9 @@
     <section class="discover-section2">
         <h2>Competitive Analysis</h2>
 
-        <img src="img/Lyrically/Ultimate-Guitar.jpeg" />
+        <img class="img-shadow" src="img/Lyrically/Ultimate-Guitar.jpeg" />
         <br>
-        <img src="img/Lyrically/Onsong.jpeg" />
+        <img class="img-shadow" src="img/Lyrically/Onsong.jpeg" />
 
 
         <h2>User Interviews</h2>
@@ -230,12 +231,12 @@
 
 
         <h2>User Persona</h2>
-        <img class="user-img" src="img/Lyrically/user persona.jpeg" />
+        <img class="user-img img-shadow" src="img/Lyrically/user persona.jpeg" />
 
         <br>
 
         <h2>Journey Mapping</h2>
-        <img class="journey-img" src="img/Lyrically/journey-map.jpeg" />
+        <img class="journey-img img-shadow" src="img/Lyrically/journey-map.jpeg" />
     </section>
 
     <section class="define-section2">
@@ -248,7 +249,7 @@
         </p>
 
         <h2>Site Map</h2>
-        <img class="site-img" src="img/Lyrically/site-map.webp" />
+        <img class="site-img img-shadow" src="img/Lyrically/site-map.webp" />
     </section>
 
     <section class="design-section">
@@ -258,7 +259,7 @@
         </div>
 
         <h2>Wireframes</h2>
-        <img class="wireframe-img" src="img/Lyrically/wireframe.png" />
+        <img class="wireframe-img img-shadow" src="img/Lyrically/wireframe.png" />
 
         <h2>Style Guide</h2>
         <img class="style-img" src="img/Lyrically/style-guide.png" />
@@ -291,7 +292,7 @@
 
         <h4>Photos of Developed Application</h4>
         <!-- image carousel -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide img-shadow" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
