--- a/lyrically.html
+++ b/lyrically.html
@@ -59,7 +59,7 @@
                 <strong>Lyrically</strong>
             </h1>
             <h4>Web Application</h4>
-            <p class="section__subtitle section__subtitle--intro">UX / UI / Front-End</p>
+            <p class="section__subtitle section__subtitle--intro typewriter">UX / UI / Front-End</p>
         </div>
 
 
@@ -73,16 +73,13 @@
     <section class="intro-section">
         <div class="overview">
             <h2>Overview</h2>
-            <p>Lyrically is a dynamic mobile application that allows the user to create, edit and delete musical
+            <p>Lyrically is a dynamic mobile application that allows the user to create, save, edit and delete musical
                 setlists.<span id="dots">..</span>
                 <span id="more">
-                    This was my frontend development capstone project at Nashville Software School. The objective of
-                    this
-                    was to build a functioning app in React.js that allows the user to create, read and destroy. I also
-                    took
-                    the
-                    initiative collect data and conduct user interviews to create a case study before developing this
-                    application. Below, I have detailed my design process and included video a walkthrough of the
+                    This was my frontend development capstone project at Nashville Software School. The objective was to
+                    build a functioning application in React.js that demonstrates the operations of CRUD (create, read, update, delete). I
+                    took the initiative to collect data and conduct user interviews to create a case study before developing this
+                    application. Below, I have detailed my design process and included a video walkthrough of the
                     developed
                     application. </span><a onclick="readMore()" id="myBtn">Read more</a>
 
@@ -124,13 +121,12 @@
     <section>
         <h2>Tools and Process</h2>
         <img class="design-proc img-shadow" src="img/Lyrically/Design Tools.png" />
-    
+
 
         <br>
 
-
+        <h3>Design Process</h3>
         <img class="design-proc" src="img/design-process.png" />
-        <figcaption>Design Process</figcaption>
     </section>
 
 
@@ -153,7 +149,7 @@
         <h2>Research Plan</h2>
         <div class="research-grid">
             <div class="research-col">
-                <h3>Activities and Interactions</h3>
+                <h4><b>Activities and Interactions</b></h4>
                 <ul>
                     <li>Live Gigs</li>
                     <li>Band Rehearsals</li>
@@ -161,7 +157,7 @@
                 </ul>
             </div>
             <div class="research-col">
-                <h3>Environments</h3>
+                <h4><b>Environments</b></h3>
                 <ul>
                     <li>Bars</li>
                     <li>Coffee Shops</li>
@@ -172,7 +168,7 @@
                 </ul>
             </div>
             <div class="research-col">
-                <h3>Target Users</h3>
+                <h4><b>Target Users</b></h4>
                 <ul>
                     <li>Musicians</li>
                     <li>Singers</li>
@@ -180,7 +176,7 @@
                 </ul>
             </div>
             <div class="research-col">
-                <h3>Competitors</h3>
+                <h4><b>Competitors</b></h4>
                 <ul>
                     <li>OnSong</li>
                     <li>Ultimate Guitar</li>
@@ -261,6 +257,7 @@
         <h2>Wireframes</h2>
         <img class="wireframe-img img-shadow" src="img/Lyrically/wireframe.png" />
 
+        <br>
         <h2>Style Guide</h2>
         <img class="style-img" src="img/Lyrically/style-guide.png" />
         <p>After studying some of the brands that the users relate to, I noticed that several had black in them.
