--- a/lyrically.html
+++ b/lyrically.html
@@ -19,6 +19,11 @@
         href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
+
+
     <!-- link bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -77,8 +82,10 @@
                 setlists.<span id="dots">..</span>
                 <span id="more">
                     This was my frontend development capstone project at Nashville Software School. The objective was to
-                    build a functioning application in React.js that demonstrates the operations of CRUD (create, read, update, delete). I
-                    took the initiative to collect data and conduct user interviews to create a case study before developing this
+                    build a functioning application in React.js that demonstrates the operations of CRUD (create, read,
+                    update, delete). I
+                    took the initiative to collect data and conduct user interviews to create a case study before
+                    developing this
                     application. Below, I have detailed my design process and included a video walkthrough of the
                     developed
                     application. </span><a onclick="readMore()" id="myBtn">Read more</a>
@@ -109,6 +116,7 @@
                 <h2>My Role</h2>
                 <p class="role-p">I am the creator, designer and developer of this app.
                 </p>
+                <br>
                 <h2>Solution</h2>
                 <p>To create an app that bridges the gab between digital setlists aimed at songwriters and those
                     marketed to
@@ -158,14 +166,14 @@
             </div>
             <div class="research-col">
                 <h4><b>Environments</b></h3>
-                <ul>
-                    <li>Bars</li>
-                    <li>Coffee Shops</li>
-                    <li>Apartment or House</li>
-                    <li>Music studio</li>
-                    <li>Restaurants</li>
-                    <li>Music Venue</li>
-                </ul>
+                    <ul>
+                        <li>Bars</li>
+                        <li>Coffee Shops</li>
+                        <li>Apartment or House</li>
+                        <li>Music studio</li>
+                        <li>Restaurants</li>
+                        <li>Music Venue</li>
+                    </ul>
             </div>
             <div class="research-col">
                 <h4><b>Target Users</b></h4>
@@ -196,7 +204,7 @@
         <br>
         <img class="img-shadow" src="img/Lyrically/Onsong.jpeg" />
 
-
+        <br>
         <h2>User Interviews</h2>
         <p>Let's meet the users</p>
         <div class="interview-container">
@@ -243,7 +251,7 @@
             The
             other constraint was time. Due to the limited time constraint, I was not able to do usability testing.
         </p>
-
+        <br>
         <h2>Site Map</h2>
         <img class="site-img img-shadow" src="img/Lyrically/site-map.webp" />
     </section>
