added new background to manooth

--- a/manooth.html
+++ b/manooth.html
@@ -58,7 +58,7 @@
                 <strong>Manooth Furniture</strong>
             </h1>
             <h4>Mobile & Web Application</h4>
-            <p class="section__subtitle section__subtitle--intro">UX / UI Design</p>
+            <p class="section__subtitle section__subtitle--intro typewriter">UX / UI Design</p>
         </div>
     </header>
 
@@ -109,7 +109,7 @@
         <h2>Final Navigation Experience</h2>
         <p>I started with a sliding hero image to get the user’s attention. I kept the home page simple, using drop down
             menus to guide the user to their perceived destination.</p>
-        <img class="media-img" src="img/manooth/manooth1.png" alt="">
+        <img class="media-img img-shadow" src="img/manooth/manooth1.png" alt="">
     </section>
 
     <section>
@@ -117,7 +117,7 @@
             button and favorite button interactive.
         </p>
 
-        <img class="media-img" src="img/manooth/manooth2.png" alt="">
+        <img class="media-img img-shadow" src="img/manooth/manooth2.png" alt="">
     </section>
 
     <section class="final-section">
@@ -137,7 +137,7 @@
 
         <h5>Image Gallery</h5>
         <!-- Image Carousel -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide img-shadow" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
